login nav fixed, login now displays error messages, started working on backend login whitespace trimjournal dates display now in yyy-mm-dd

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -59,6 +59,6 @@ h6.display-5{
     color: $indigo-400;
 }
 
-.btn-light-nxt{
-  color: $light-700;
+.btn-light-custom{
+  background-color: $gray-400;
 }
